--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.9"
+    "mysql2": "^1.6.4",
+    "nodemon": "^1.18.9",
+    "sequelize": "^4.42.0"
   }
 }
