--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/kcakar/PersonalityTest/issues"
   },
-  "homepage": "https://github.com/kcakar/PersonalityTest#readme"
+  "homepage": "https://github.com/kcakar/PersonalityTest#readme",
+  "devDependencies": {
+    "eslint-plugin-security": "^1.4.0"
+  },
+  "dependencies": {
+    "helmet": "^3.15.0"
+  }
 }
