--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "helmet": "^3.15.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0",
