--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-toast-notifications": "^1.3.1",
+    "react-toastify": "^4.5.2",
     "recharts": "^1.4.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
