--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "personality-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://triaakademi.com/",
+  "homepage": "http://www.bitatesti.com",
   "dependencies": {
     "@react-pdf/renderer": "^1.2.2",
     "html2canvas": "^1.0.0-alpha.12",
